- ADDED: Support for subcommands and subcommand groups
- ADDED: Timeout command with message notification and purge messages option.

- CHANGED: Macro commands have been migrated to subcommands for ease of use
- CHANGED: Ban command is now permanent, no duration. A temporary removal can be done using timeout